--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -6,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,900&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -308,38 +308,148 @@ template {
 [hidden] {
   display: none; }
 
+.container {
+  max-width: 1140px;
+  width: 96%;
+  padding: 15px;
+  margin: 0 auto; }
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 -15px; }
+  .row + .row {
+    margin-top: 15px; }
+
+[class^="col-"] {
+  margin: 0 15px; }
+
+.col-1-1 {
+  width: calc(100% / 1 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-1 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-2 {
+  width: calc(100% / 2 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-2 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-3 {
+  width: calc(100% / 3 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-3 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-4 {
+  width: calc(100% / 4 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-4 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-5 {
+  width: calc(100% / 5 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-5 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-6 {
+  width: calc(100% / 6 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-6 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-7 {
+  width: calc(100% / 7 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-7 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-8 {
+  width: calc(100% / 8 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-8 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-9 {
+  width: calc(100% / 9 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-9 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-10 {
+  width: calc(100% / 10 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-10 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-11 {
+  width: calc(100% / 11 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-11 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
+.col-1-12 {
+  width: calc(100% / 12 - (2 * 15px)); }
+  @media screen and (max-width: 768px) {
+    .col-1-12 {
+      width: calc(100%  - (2 * 15px));
+      margin-bottom: 15px; } }
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
 html {
-  font: 10px/1.6 'Open Sans', serif;
+  font: 10px/1.6 'Raleway', sans-serif;
   height: 100%; }
 
 body {
   font-size: 1.7rem;
   color: #333;
   height: 100%;
-  background-color: green;
   margin: 0; }
 
 .container {
   margin: 0 auto;
   max-width: 1200px;
-  width: 96%; }
+  width: 98%; }
 
-.section--bg {
+.header {
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; }
-
-.section__info--midle {
-  position: absolute;
-  top: 40%;
-  width: 350px; }
-
-header {
-  height: 100vh; }
+  .header__info {
+    position: absolute;
+    top: 40%;
+    width: 350px; }
+  .header__title {
+    font-size: 6rem;
+    font-weight: 800;
+    font-family: 'Raleway', sans-serif;
+    margin: 0; }
 
 nav {
   display: -webkit-box;
@@ -372,7 +482,7 @@ nav {
     justify-content: space-around; }
   .menu__link {
     text-decoration: none;
-    font-family: 'Raleway', sans-serif;
+    font-family: Raleway, sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -385,16 +495,6 @@ nav {
     transition: all 0.4s ease-in; }
     .menu__link:hover, .menu__link:focus, .menu__link:active, .menu__link--active {
       border-top: 3px solid #ff5f33; }
-
-.info__title {
-  font-size: 6rem;
-  font-weight: 800;
-  font-family: 'Raleway', sans-serif;
-  margin: 0;
-  color: #242424; }
-
-.info p {
-  color: #242424; }
 
 .btn {
   display: inline-block;
@@ -418,9 +518,88 @@ nav {
 
 .scroll {
   position: absolute;
-  top: 90%;
+  top: 80%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
+
+.section__img {
+  margin: 30% 0; }
+
+.section--aqua {
+  background-color: #00b0b0;
+  color: #fff;
+  position: relative; }
+  .section--aqua .info {
+    position: absolute;
+    top: 20%;
+    padding: 80px; }
+
+.section--blue {
+  background-color: #70c1ff;
+  position: relative; }
+  .section--blue .info {
+    position: absolute;
+    top: 40%;
+    color: #fff; }
+
+.section--yellow {
+  background-color: #ffe730; }
+  .section--yellow .info {
+    padding: 50px;
+    text-align: center; }
+    .section--yellow .info p {
+      padding: 0 100px; }
+
+.info__title {
+  font-size: 9rem;
+  font-family: Raleway, sans-serif;
+  margin: 0; }
+
+.services {
+  list-style-type: none;
+  position: absolute;
+  top: 25%; }
+  .services__items {
+    background-color: #fff;
+    width: 350px;
+    height: 100px;
+    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    -webkit-box-shadow: 10px 10px 5px -7px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px -7px rgba(0, 0, 0, 0.75);
+    -webkit-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in; }
+    .services__items::after {
+      content: '';
+      border-right: 1px solid gray;
+      width: 1%;
+      height: 100%;
+      position: absolute;
+      left: 75%; }
+    .services__items:hover, .services__items:focus, .services__items:active, .services__items--active {
+      -webkit-box-shadow: none;
+      box-shadow: none; }
+  .services__item {
+    width: 75%; }
+  .services__title {
+    margin: 0;
+    text-align: center; }
+  .services__icons {
+    width: 20%;
+    height: 10%;
+    position: absolute;
+    top: 30%;
+    left: 80%; }
