--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -5,7 +6,6 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,900&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -440,7 +440,8 @@ body {
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
   .header__info {
     position: absolute;
     top: 40%;
@@ -448,7 +449,7 @@ body {
   .header__title {
     font-size: 6rem;
     font-weight: 800;
-    font-family: 'Raleway', sans-serif;
+    font-family: Raleway, sans-serif;
     margin: 0; }
 
 nav {
@@ -501,7 +502,6 @@ nav {
   margin-top: 20px;
   text-decoration: none;
   background-color: #ff5f33;
-  border: 1px solid #ff5f33;
   padding: 15px 30px;
   color: #fff;
   font-weight: 300;
@@ -512,9 +512,19 @@ nav {
   -webkit-transition: all 0.4s ease-in;
   -o-transition: all 0.4s ease-in;
   transition: all 0.4s ease-in; }
+  .btn--blue {
+    background-color: #5585a2;
+    margin-bottom: 100px; }
+  .btn--green {
+    background-color: #96b92c;
+    border: none; }
+  .btn--red {
+    background-color: #f72b3b;
+    margin-bottom: 100px; }
   .btn:hover, .btn:focus, .btn:active, .btn--active {
-    background-color: #fff;
-    color: #ff5f33; }
+    color: #fff;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
 
 .scroll {
   position: absolute;
@@ -526,7 +536,8 @@ nav {
   transform: translate(-50%, -50%); }
 
 .section__img {
-  margin: 30% 0; }
+  margin: 10% 0;
+  width: 100%; }
 
 .section--aqua {
   background-color: #00b0b0;
@@ -534,8 +545,12 @@ nav {
   position: relative; }
   .section--aqua .info {
     position: absolute;
-    top: 20%;
-    padding: 80px; }
+    top: 15%; }
+    .section--aqua .info p {
+      width: 60%; }
+      @media screen and (max-device-width: 1024px) {
+        .section--aqua .info p {
+          width: 90%; } }
 
 .section--blue {
   background-color: #70c1ff;
@@ -544,14 +559,49 @@ nav {
     position: absolute;
     top: 40%;
     color: #fff; }
+    @media screen and (max-device-width: 1024px) {
+      .section--blue .info {
+        top: 25%; } }
 
 .section--yellow {
-  background-color: #ffe730; }
+  background-color: #ffe730;
+  text-align: center; }
   .section--yellow .info {
-    padding: 50px;
-    text-align: center; }
+    text-align: center;
+    padding-top: 80px; }
     .section--yellow .info p {
-      padding: 0 100px; }
+      width: 50%;
+      display: inline-block; }
+
+.section__white {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .section__white .info__title {
+    font-size: 4rem;
+    font-weight: 700; }
+  .section__white .info p {
+    width: 50%; }
+
+.section__violet {
+  background-color: #b07cf7;
+  color: #fff;
+  text-align: center; }
+  .section__violet p {
+    display: inline-block;
+    width: 60%; }
+
+.section--bg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 .info__title {
   font-size: 9rem;
@@ -561,7 +611,10 @@ nav {
 .services {
   list-style-type: none;
   position: absolute;
-  top: 25%; }
+  top: 20%; }
+  @media screen and (max-device-width: 1024px) {
+    .services {
+      top: 15%; } }
   .services__items {
     background-color: #fff;
     width: 350px;
@@ -596,10 +649,171 @@ nav {
     width: 75%; }
   .services__title {
     margin: 0;
-    text-align: center; }
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700; }
   .services__icons {
     width: 20%;
     height: 10%;
     position: absolute;
     top: 30%;
     left: 80%; }
+
+.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin: 45px 0; }
+  .gallery__box {
+    margin: .5%; }
+    .gallery__box--lg {
+      width: 60%; }
+    .gallery__box--md {
+      width: 45%; }
+    .gallery__box--sm {
+      width: 30%; }
+  .gallery__img {
+    width: 100%; }
+
+.form__input {
+  height: 55px;
+  width: 550px;
+  margin-right: 30px;
+  padding-left: 15px;
+  font-size: 1.5rem;
+  -webkit-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in; }
+  .form__input:hover::-webkit-input-placeholder, .form__input:focus::-webkit-input-placeholder, .form__input:active::-webkit-input-placeholder, .form__input--active::-webkit-input-placeholder {
+    opacity: 1;
+    -webkit-transition: opacity 200ms;
+    -o-transition: opacity 200ms;
+    transition: opacity 200ms; }
+  .form__input:hover::-moz-placeholder, .form__input:focus::-moz-placeholder, .form__input:active::-moz-placeholder, .form__input--active::-moz-placeholder {
+    opacity: 1;
+    -webkit-transition: opacity 200ms;
+    -o-transition: opacity 200ms;
+    transition: opacity 200ms; }
+  .form__input:hover:-ms-input-placeholder, .form__input:focus:-ms-input-placeholder, .form__input:active:-ms-input-placeholder, .form__input--active:-ms-input-placeholder {
+    opacity: 1;
+    -webkit-transition: opacity 200ms;
+    -o-transition: opacity 200ms;
+    transition: opacity 200ms; }
+  .form__input:hover::-ms-input-placeholder, .form__input:focus::-ms-input-placeholder, .form__input:active::-ms-input-placeholder, .form__input--active::-ms-input-placeholder {
+    opacity: 1;
+    -webkit-transition: opacity 200ms;
+    -o-transition: opacity 200ms;
+    transition: opacity 200ms; }
+  .form__input:hover::placeholder, .form__input:focus::placeholder, .form__input:active::placeholder, .form__input--active::placeholder {
+    opacity: 1;
+    -webkit-transition: opacity 200ms;
+    -o-transition: opacity 200ms;
+    transition: opacity 200ms; }
+  .form__input:hover:focus::-webkit-input-placeholder, .form__input:focus:focus::-webkit-input-placeholder, .form__input:active:focus::-webkit-input-placeholder, .form__input--active:focus::-webkit-input-placeholder {
+    opacity: 0; }
+  .form__input:hover:focus::-moz-placeholder, .form__input:focus:focus::-moz-placeholder, .form__input:active:focus::-moz-placeholder, .form__input--active:focus::-moz-placeholder {
+    opacity: 0; }
+  .form__input:hover:focus:-ms-input-placeholder, .form__input:focus:focus:-ms-input-placeholder, .form__input:active:focus:-ms-input-placeholder, .form__input--active:focus:-ms-input-placeholder {
+    opacity: 0; }
+  .form__input:hover:focus::-ms-input-placeholder, .form__input:focus:focus::-ms-input-placeholder, .form__input:active:focus::-ms-input-placeholder, .form__input--active:focus::-ms-input-placeholder {
+    opacity: 0; }
+  .form__input:hover:focus::placeholder, .form__input:focus:focus::placeholder, .form__input:active:focus::placeholder, .form__input--active:focus::placeholder {
+    opacity: 0; }
+
+.blog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+  .blog__box {
+    width: 33%;
+    margin: 15px;
+    position: relative;
+    color: #fff; }
+  .blog__img {
+    width: 100%; }
+  .blog__wrap {
+    -webkit-box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+    position: relative;
+    opacity: .8;
+    -webkit-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in; }
+    .blog__wrap:hover, .blog__wrap:focus, .blog__wrap:active, .blog__wrap--active {
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      opacity: 1; }
+    .blog__wrap::after {
+      content: "";
+      background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.8)), color-stop(60%, rgba(0, 0, 0, 0)));
+      background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0) 60%);
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0) 60%);
+      display: block;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%; }
+  .blog__info {
+    text-align: left;
+    position: absolute;
+    top: 60%;
+    padding: 0 10px; }
+  .blog__title {
+    line-height: 1.2;
+    font-size: 2rem;
+    max-height: 5rem;
+    overflow: hidden;
+    margin: 5px 0; }
+  .blog__created {
+    margin-top: 10px;
+    font-size: 1.3rem;
+    font-weight: 300; }
+  .blog__author::before {
+    content: 'By';
+    padding-right: 5px; }
+  .blog__author::after {
+    content: '-';
+    padding-left: 5px; }
+
+.date {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  z-index: 1;
+  background: rgba(28, 28, 28, 0.59);
+  border-radius: 20%;
+  width: 60px;
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  line-height: 1; }
+  .date__day {
+    z-index: 2;
+    opacity: 1;
+    font-weight: 700;
+    font-size: 3.2rem;
+    opacity: 1; }
+  .date__month {
+    font-size: 2.1rem;
+    font-weight: 900;
+    text-transform: uppercase; }
