--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,900&display=swap');
 
 
 @import 'normalize';
@@ -13,7 +14,6 @@ $blue:#70c1ff;
 $yellow:#ffe730;
 
 
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,300,400,700,900&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -28,7 +28,6 @@ body {
      font-size: 1.7rem;
      color: #333;
      height: 100%;
-     // background-color:#ffe730;
      margin:0;
 }
 
@@ -39,14 +38,10 @@ body {
 }
 
 
-
-
-
 .header {
   height: 100%;
-  background-position:center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  @include backGround();
+  background-attachment: fixed;
   &__info{
       position: absolute;
       top:40%;
@@ -55,7 +50,7 @@ body {
   &__title{
     font-size:6rem;
     font-weight: 800;
-    font-family:'Raleway', sans-serif;
+    font-family:Raleway, sans-serif;
     margin: 0;
   }
 }
@@ -100,21 +95,33 @@ nav {
   }
 }
 
-  .btn {
+.btn {
   display: inline-block;
   margin-top: 20px;
   @include tdn();
   background-color: $brand;
-  border:1px solid $brand;
   padding: 15px 30px;
   color:#fff;
   font-weight: 300;
   font-size: 2rem;
   text-transform: uppercase;
   box-shadow: -18px 18px 17px -21px rgba(0,0,0,1);
+  &--blue {
+  	background-color: #5585a2;
+  	margin-bottom: 100px;
+ 
+  }
+  &--green {
+  	background-color: #96b92c;
+  	border:none;
+  }
+  &--red {
+  	background-color: #f72b3b;
+  	margin-bottom: 100px;
+  }
   @include hover {
-    background-color: #fff;
-    color:$brand;
+    color:$white;
+    box-shadow:none;
   }  
 }
 
@@ -127,37 +134,83 @@ nav {
 
 .section {
   &__img {
-    margin: 30% 0;
+    margin: 10% 0;
+    width: 100%;
   }
   &--aqua{
     background-color: $aqua;
     color:#fff;
     position: relative;
-    .info {
-      position: absolute;
-      top:20%;
-      padding:80px;      
+   	.info {
+	   	position: absolute;
+	    top:15%;
+	    
+    	p{
+    		// font-size: 1.7rem;
+    		width: 60%;
+    		@media screen and (max-device-width: 1024px){
+	    		width:90%;	
+   			}	
+    	}	
     }
   }
   &--blue {
     background-color: $blue;
     position: relative;
     .info{
-      position: absolute;
-      top:40%;
-      color:$white;
-    }
+    	position: absolute;
+    	top:40%;
+    	color:$white;
+    	@media screen and (max-device-width: 1024px){
+	  		top:25%;
+   		}
+     }
+
   }
   &--yellow {
-  background-color: $yellow;
-    
+	background-color: $yellow;
+	text-align: center;
     .info{
-      padding: 50px;
-       text-align: center;
-      p{
-        padding: 0 100px;
-      }
+		text-align: center;
+		padding-top: 80px;
+    	&__title {
+    	}
+    	p{
+			width: 50%;
+			display: inline-block;
+      	}
     }
+  }
+  &__white {
+	@include backGround();
+	height: 500px;
+	display: flex;
+	-webkit-align-items: center;
+	        align-items: center;
+	.info {
+		&__title {
+			font-size: 4rem;
+			font-weight: 700;
+		}
+		p {
+			width: 50%;
+		}
+	}
+	
+  }
+  &__violet {
+  	background-color: #b07cf7;
+  	color:$white;
+  	text-align: center;
+  	p{
+		display: inline-block;
+  		width:60%;
+  	}
+  	
+  }
+  &--bg{
+  	@include backGround();
+  	
   }
 }
 
@@ -172,7 +225,10 @@ nav {
 .services{
   list-style-type: none;
   position: absolute;
-  top:25%;
+  top:20%;
+  @media screen and (max-device-width: 1024px){
+	top:15%;
+   }
   
   &__items{
     background-color: $white;
@@ -204,6 +260,8 @@ nav {
   &__title{
     margin: 0;
     text-align: center;
+    font-size: 2rem;
+    font-weight:700 ;
   }
   &__icons{
     width: 20%;
@@ -213,3 +271,133 @@ nav {
     left: 80%;
   }
 }
+
+.gallery {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	margin: 45px 0;
+  &__box{
+    margin: .5%;
+    &--lg{
+      width: 60%
+    }
+    &--md{
+	width: 45%
+    }
+    &--sm{
+      width: 30%
+    }
+  }
+  &__img{
+    width: 100%;
+    &--lg{}
+    &--md{}
+    &--sm{}
+  }
+}
+
+.form {
+	&__input {
+		height: 55px;
+		width: 550px;
+		margin-right: 30px;
+		padding-left: 15px;
+		font-size: 1.5rem;
+		@include hover {
+			@include pl-fade-out();
+		}
+	}	
+}
+
+.blog {
+	display: flex;
+	justify-content: space-around;
+	&__box{
+		width: 33%;
+		margin: 15px;
+		position: relative;	
+		color:$white;
+	}
+	
+	&__img{
+		width: 100%;
+	}
+	&__wrap{
+		box-shadow: 10px 10px 5px -10px rgba(0,0,0,0.75);
+		position: relative;
+			opacity:.8;
+		@include hover {
+			box-shadow:none;
+			opacity:1;
+		}
+		&::after{
+			content: "";
+			background-image: linear-gradient(to top, rgba(0,0,0,.8), rgba(0,0,0,0) 60%);
+			display: block;
+		    height: 100%;
+		    position: absolute;
+		    left: 0;
+		    top: 0;
+		    width: 100%;
+		    }
+	}
+	&__info{
+		text-align: left;
+		position: absolute;
+		top:60%;
+		padding: 0 10px;
+		
+	}
+	&__title{
+		line-height: 1.2;
+		font-size: 2rem;
+		max-height: 5rem;
+		overflow: hidden;
+		margin: 5px 0;
+	}
+	&__created{
+		margin-top: 10px;
+		font-size: 1.3rem;
+		font-weight: 300;
+	}
+	&__author {
+		&::before{
+			content:'By';
+			padding-right: 5px;
+		}
+		&::after{
+			content:'-';
+			padding-left: 5px;
+		}
+		
+	}
+}
+
+.date{
+		position: absolute;
+		top:10%;
+		left:10%;
+		z-index: 1;
+		background: rgba(28,28,28,0.59);
+		border-radius:20%;
+		width: 60px;
+		height: 60px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		line-height: 1;
+		&__day{
+			z-index: 2;
+			opacity:1;
+			font-weight: 700;
+			font-size: 3.2rem;
+			opacity:1;
+		}
+		&__month{
+			font-size: 2.1rem;
+			font-weight: 900;
+			text-transform: uppercase;
+		}
+	}
