--- a/css/style.css
+++ b/css/style.css
@@ -458,19 +458,17 @@ nav {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
-
-.logo {
+  justify-content: space-between;
   margin-top: 35px; }
-  .logo__item {
-    -webkit-transition: all 0.4s ease-in;
-    -o-transition: all 0.4s ease-in;
-    transition: all 0.4s ease-in; }
-    .logo__item:hover, .logo__item:focus, .logo__item:active, .logo__item--active {
-      fill: #ff5f33; }
+
+.logo__item {
+  -webkit-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in; }
+  .logo__item:hover, .logo__item:focus, .logo__item:active, .logo__item--active {
+    fill: #ff5f33; }
 
 .menu {
-  margin-top: 35px;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -497,7 +495,8 @@ nav {
     .menu__link:hover, .menu__link:focus, .menu__link:active, .menu__link--active {
       border-top: 3px solid #ff5f33; }
 
-.btn {
+.btn,
+button {
   display: inline-block;
   margin-top: 20px;
   text-decoration: none;
@@ -507,24 +506,54 @@ nav {
   font-weight: 300;
   font-size: 2rem;
   text-transform: uppercase;
-  -webkit-box-shadow: -18px 18px 17px -21px black;
-  box-shadow: -18px 18px 17px -21px black;
+  border: none;
+  -webkit-box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
   -webkit-transition: all 0.4s ease-in;
   -o-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
   transition: all 0.4s ease-in; }
-  .btn--blue {
-    background-color: #5585a2;
-    margin-bottom: 100px; }
-  .btn--green {
-    background-color: #96b92c;
-    border: none; }
-  .btn--red {
-    background-color: #f72b3b;
-    margin-bottom: 100px; }
-  .btn:hover, .btn:focus, .btn:active, .btn--active {
-    color: #fff;
+  .btn:hover, .btn:focus, .btn:active, .btn--active,
+  button:hover,
+  button:focus,
+  button:active,
+  button--active {
     -webkit-box-shadow: none;
     box-shadow: none; }
+  .btn--blue,
+  button--blue {
+    background-color: #5585a2;
+    margin-bottom: 100px; }
+  .btn--green,
+  button--green {
+    background-color: #96b92c;
+    border: none; }
+  .btn--red,
+  button--red {
+    background-color: #f72b3b;
+    margin-bottom: 100px; }
+  .btn--transparent,
+  button--transparent {
+    background-color: #00C4C4;
+    opacity: .6;
+    outline: 5px solid transparent;
+    margin: 0;
+    -webkit-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in; }
+    .btn--transparent:hover, .btn--transparent:focus, .btn--transparent:active, .btn--transparent--active,
+    button--transparent:hover,
+    button--transparent:focus,
+    button--transparent:active,
+    button--transparent--active {
+      opacity: 1;
+      outline: 5px solid #355b82; }
+  .btn:hover, .btn:focus, .btn:active, .btn--active,
+  button:hover,
+  button:focus,
+  button:active,
+  button--active {
+    color: #fff; }
 
 .scroll {
   position: absolute;
@@ -573,7 +602,7 @@ nav {
       width: 50%;
       display: inline-block; }
 
-.section__white {
+.section--white {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -584,24 +613,28 @@ nav {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
-  .section__white .info__title {
+  .section--white .info__title {
     font-size: 4rem;
     font-weight: 700; }
-  .section__white .info p {
+  .section--white .info p {
     width: 50%; }
 
-.section__violet {
+.section--violet {
   background-color: #b07cf7;
   color: #fff;
   text-align: center; }
-  .section__violet p {
+  .section--violet p {
     display: inline-block;
     width: 60%; }
 
 .section--bg {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  text-align: center; }
+  .section--bg p {
+    display: inline-block;
+    width: 30%; }
 
 .info__title {
   font-size: 9rem;
@@ -630,11 +663,14 @@ nav {
     -ms-flex-align: center;
     align-items: center;
     position: relative;
-    -webkit-box-shadow: 10px 10px 5px -7px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 10px 5px -7px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
     -webkit-transition: all 0.4s ease-in;
     -o-transition: all 0.4s ease-in;
     transition: all 0.4s ease-in; }
+    .services__items:hover, .services__items:focus, .services__items:active, .services__items--active {
+      -webkit-box-shadow: none;
+      box-shadow: none; }
     .services__items::after {
       content: '';
       border-right: 1px solid gray;
@@ -642,9 +678,6 @@ nav {
       height: 100%;
       position: absolute;
       left: 75%; }
-    .services__items:hover, .services__items:focus, .services__items:active, .services__items--active {
-      -webkit-box-shadow: none;
-      box-shadow: none; }
   .services__item {
     width: 75%; }
   .services__title {
@@ -679,7 +712,20 @@ nav {
     .gallery__box--sm {
       width: 30%; }
   .gallery__img {
-    width: 100%; }
+    -webkit-box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+    width: 100%;
+    opacity: .9;
+    box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.75);
+    -webkit-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in; }
+    .gallery__img:hover, .gallery__img:focus, .gallery__img:active, .gallery__img--active {
+      -webkit-box-shadow: none;
+      box-shadow: none; }
+    .gallery__img:hover, .gallery__img:focus, .gallery__img:active, .gallery__img--active {
+      opacity: 1; }
 
 .form__input {
   height: 55px;
@@ -770,7 +816,7 @@ nav {
   .blog__title {
     line-height: 1.2;
     font-size: 2rem;
-    max-height: 5rem;
+    max-height: 7rem;
     overflow: hidden;
     margin: 5px 0; }
   .blog__created {
@@ -791,8 +837,6 @@ nav {
   z-index: 1;
   background: rgba(28, 28, 28, 0.59);
   border-radius: 20%;
-  width: 60px;
-  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -806,14 +850,133 @@ nav {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  line-height: 1; }
+  line-height: 1;
+  text-transform: uppercase;
+  padding: 5px 10px; }
   .date__day {
     z-index: 2;
     opacity: 1;
     font-weight: 700;
     font-size: 3.2rem;
-    opacity: 1; }
+    max-width: 15.5rem;
+    max-height: 6rem;
+    overflow: hidden; }
   .date__month {
     font-size: 2.1rem;
     font-weight: 900;
-    text-transform: uppercase; }
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 16rem;
+    max-height: 6rem; }
+
+.contact {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap;
+  width: 100%; }
+  .contact input {
+    color: #fff;
+    margin-bottom: 15px;
+    background-color: #00C4C4;
+    border: none;
+    height: 50px;
+    padding-left: 20px;
+    border-left: 5px solid transparent;
+    opacity: .6;
+    font-weight: 800;
+    width: 100%;
+    font-weight: 800; }
+    .contact input::-webkit-input-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact input::-moz-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact input:-ms-input-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact input::-ms-input-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact input::placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact input::-webkit-input-placeholder {
+      color: #fff;
+      font-weight: 300; }
+    .contact input::-moz-placeholder {
+      color: #fff;
+      font-weight: 300; }
+    .contact input:-ms-input-placeholder {
+      color: #fff;
+      font-weight: 300; }
+    .contact input::-ms-input-placeholder {
+      color: #fff;
+      font-weight: 300; }
+    .contact input::placeholder {
+      color: #fff;
+      font-weight: 300; }
+    .contact input[type=number]::-webkit-inner-spin-button, .contact input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0; }
+    .contact input:focus, .contact input:active {
+      border-left: 5px solid #355b82;
+      background-color: #00C4C4;
+      opacity: 1; }
+  .contact__message {
+    min-height: 250px;
+    width: 100%;
+    color: #fff;
+    margin-bottom: 15px;
+    background-color: #00C4C4;
+    border: none;
+    height: 50px;
+    padding-left: 20px;
+    border-left: 5px solid transparent;
+    opacity: .6;
+    padding-top: 15px;
+    font-weight: 800;
+    font-weight: 800; }
+    .contact__message::-webkit-input-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact__message::-moz-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact__message:-ms-input-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact__message::-ms-input-placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact__message::placeholder {
+      font-weight: 300;
+      color: #fff; }
+    .contact__message:focus, .contact__message:active {
+      border-left: 5px solid #355b82;
+      background-color: #00C4C4;
+      opacity: 1; }
+
+.address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 150px;
+  font-size: 2rem; }
+  .address__title {
+    font-weight: 700; }
+  .address__subtitle {
+    margin-bottom: 10px; }
