--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -58,3 +58,19 @@
 	left: 0;
 	right: 0;
 }
+
+@mixin shadowpush($elementshadow:10px 10px 5px -10px rgba(0,0,0,0.75)) {
+	box-shadow:$elementshadow;
+	@include hover{
+		box-shadow:none;
+	}
+	
+}
+
+@mixin fontPlacehold {
+	font-weight: 800;
+	&::placeholder{
+			font-weight: 300;
+			color:$white;
+		}
+}
