--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,8 @@ $white:#fff;
 $aqua:#00b0b0;
 $blue:#70c1ff;
 $yellow:#ffe730;
-
+$contactcolor:#00C4C4;
+$elementshadow:10px 10px 5px -10px rgba(0,0,0,0.75);
 
 
 * {
@@ -59,10 +60,10 @@ body {
 nav {
   display: flex;
   justify-content: space-between;
+  margin-top: 35px;
 }
 
 .logo {
-    margin-top: 35px;
   &__item{
     @include hover {
       fill:$brand;
@@ -71,7 +72,6 @@ nav {
 }
 
 .menu{
-    margin-top: 35px;
     list-style-type: none;
     display: flex;
     &__item {
@@ -95,7 +95,8 @@ nav {
   }
 }
 
-.btn {
+.btn,
+button {
   display: inline-block;
   margin-top: 20px;
   @include tdn();
@@ -105,11 +106,11 @@ nav {
   font-weight: 300;
   font-size: 2rem;
   text-transform: uppercase;
-  box-shadow: -18px 18px 17px -21px rgba(0,0,0,1);
+  border:none;
+  @include shadowpush();
   &--blue {
   	background-color: #5585a2;
   	margin-bottom: 100px;
- 
   }
   &--green {
   	background-color: #96b92c;
@@ -119,9 +120,18 @@ nav {
   	background-color: #f72b3b;
   	margin-bottom: 100px;
   }
+  &--transparent {
+  	background-color: $contactcolor;
+  	opacity:.6;
+  	outline:5px solid transparent;
+  	margin: 0;
+  	@include hover{
+  		opacity:1;
+  		outline:5px solid #355b82;
+  	}
+  }
   @include hover {
     color:$white;
-    box-shadow:none;
   }  
 }
 
@@ -146,7 +156,6 @@ nav {
 	    top:15%;
 	    
     	p{
-    		// font-size: 1.7rem;
     		width: 60%;
     		@media screen and (max-device-width: 1024px){
 	    		width:90%;	
@@ -181,12 +190,11 @@ nav {
       	}
     }
   }
-  &__white {
+  &--white {
 	@include backGround();
 	height: 500px;
 	display: flex;
-	-webkit-align-items: center;
-	        align-items: center;
+	align-items: center;
 	.info {
 		&__title {
 			font-size: 4rem;
@@ -198,7 +206,7 @@ nav {
 	}
 	
   }
-  &__violet {
+  &--violet {
   	background-color: #b07cf7;
   	color:$white;
   	text-align: center;
@@ -210,6 +218,11 @@ nav {
   }
   &--bg{
   	@include backGround();
+  	text-align: center;
+  	p {
+  		display: inline-block;
+  		width:30%;
+  	}
   	
   }
 }
@@ -239,8 +252,7 @@ nav {
     justify-content:space-between;
     align-items: center;
     position: relative;
-    box-shadow: 10px 10px 5px -7px rgba(0,0,0,0.75);
-    
+    @include shadowpush();
     &::after {
       content:'';
       border-right:1px solid gray;
@@ -248,9 +260,6 @@ nav {
       height: 100%;
       position: absolute;
       left:75%;
-    }
-    @include hover{
-      box-shadow:none;
     }
     
   }
@@ -279,6 +288,7 @@ nav {
 	margin: 45px 0;
   &__box{
     margin: .5%;
+    
     &--lg{
       width: 60%
     }
@@ -290,10 +300,13 @@ nav {
     }
   }
   &__img{
+  	box-shadow: $elementshadow;
     width: 100%;
-    &--lg{}
-    &--md{}
-    &--sm{}
+    opacity:.9;
+	@include shadowpush();
+    @include hover{
+    	opacity: 1;
+    }
   }
 }
 
@@ -313,28 +326,28 @@ nav {
 .blog {
 	display: flex;
 	justify-content: space-around;
+	// flex-flow:row wrap;
 	&__box{
 		width: 33%;
 		margin: 15px;
 		position: relative;	
 		color:$white;
 	}
-	
-	&__img{
+  &__img{
 		width: 100%;
 	}
 	&__wrap{
 		box-shadow: 10px 10px 5px -10px rgba(0,0,0,0.75);
 		position: relative;
-			opacity:.8;
+		opacity:.8;
 		@include hover {
 			box-shadow:none;
 			opacity:1;
 		}
 		&::after{
-			content: "";
-			background-image: linear-gradient(to top, rgba(0,0,0,.8), rgba(0,0,0,0) 60%);
-			display: block;
+			  content: "";
+			  background-image: linear-gradient(to top, rgba(0,0,0,.8), rgba(0,0,0,0) 60%);
+		    display: block;
 		    height: 100%;
 		    position: absolute;
 		    left: 0;
@@ -347,15 +360,15 @@ nav {
 		position: absolute;
 		top:60%;
 		padding: 0 10px;
-		
 	}
 	&__title{
 		line-height: 1.2;
 		font-size: 2rem;
-		max-height: 5rem;
+		max-height: 7rem;
 		overflow: hidden;
 		margin: 5px 0;
-	}
+    // @include ellipsis();
+      }
 	&__created{
 		margin-top: 10px;
 		font-size: 1.3rem;
@@ -370,34 +383,110 @@ nav {
 			content:'-';
 			padding-left: 5px;
 		}
-		
 	}
 }
 
 .date{
-		position: absolute;
+    position: absolute;
 		top:10%;
 		left:10%;
 		z-index: 1;
 		background: rgba(28,28,28,0.59);
 		border-radius:20%;
-		width: 60px;
-		height: 60px;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		line-height: 1;
-		&__day{
+    text-transform: uppercase;
+    padding:5px 10px;
+  	&__day{
 			z-index: 2;
 			opacity:1;
 			font-weight: 700;
 			font-size: 3.2rem;
-			opacity:1;
+      max-width:15.5rem;
+      max-height:6rem;
+      overflow: hidden;
+      
 		}
+
 		&__month{
 			font-size: 2.1rem;
 			font-weight: 900;
-			text-transform: uppercase;
+			@include ellipsis();
+      max-width:16rem;
+      max-height:6rem;
 		}
 	}
+
+.contact {
+	margin-top: 30px;
+	display: flex;
+	flex-flow:column wrap;
+	width:100%;
+	input{
+		color:$white;
+		margin-bottom: 15px;
+		background-color:  #00C4C4;
+		border:none;
+		height: 50px;
+		padding-left:20px;
+		border-left:5px solid transparent;
+		opacity:.6;
+		font-weight: 800;
+		width:100%;
+		@include fontPlacehold();
+		&::placeholder{
+			color:$white;
+			font-weight: 300;
+		}
+		&[type=number]::-webkit-inner-spin-button, 
+		&[type=number]::-webkit-outer-spin-button { 
+			-webkit-appearance: none; 
+  			margin: 0; 
+		}
+		&:focus,
+		&:active{
+			border-left:5px solid #355b82;
+			background-color: #00C4C4;
+			opacity:1;
+		}
+	}
+	&__message{
+		min-height: 250px;
+		width:100%;
+		color:$white;
+		margin-bottom: 15px;
+		background-color:  #00C4C4;
+		border:none;
+		height: 50px;
+		padding-left:20px;
+		border-left:5px solid transparent;
+		opacity:.6;
+		padding-top: 15px;
+		font-weight: 800;
+		@include fontPlacehold();
+		&:focus,
+		&:active{
+			border-left:5px solid #355b82;
+			background-color: #00C4C4;
+			opacity:1;
+		}
+	}	
+}
+
+.address {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	margin-top: 30px;
+	margin-left: 150px;
+	font-size: 2rem;
+	&__title{
+		font-weight: 700;
+	}
+	&__subtitle {
+		margin-bottom: 10px;
+	}
+}
