--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,9 @@ $contactcolor:#00C4C4;
 $elementshadow:10px 10px 5px -10px rgba(0,0,0,0.75);
 
 
+
+
+
 * {
 	box-sizing: border-box;
 }
@@ -107,7 +110,7 @@ button {
   font-size: 2rem;
   text-transform: uppercase;
   border:none;
-  @include shadowpush();
+  @include shadowPush();
   &--blue {
   	background-color: #5585a2;
   	margin-bottom: 100px;
@@ -252,7 +255,7 @@ button {
     justify-content:space-between;
     align-items: center;
     position: relative;
-    @include shadowpush();
+    @include shadowPush();
     &::after {
       content:'';
       border-right:1px solid gray;
@@ -303,7 +306,7 @@ button {
   	box-shadow: $elementshadow;
     width: 100%;
     opacity:.9;
-	@include shadowpush();
+	@include shadowPush();
     @include hover{
     	opacity: 1;
     }
@@ -326,9 +329,10 @@ button {
 .blog {
 	display: flex;
 	justify-content: space-around;
-	// flex-flow:row wrap;
 	&__box{
+    @include tdn();
 		width: 33%;
+    height: 100%;
 		margin: 15px;
 		position: relative;	
 		color:$white;
@@ -337,11 +341,10 @@ button {
 		width: 100%;
 	}
 	&__wrap{
-		box-shadow: 10px 10px 5px -10px rgba(0,0,0,0.75);
+    @include shadowPush();
 		position: relative;
-		opacity:.8;
+		opacity:.8;  
 		@include hover {
-			box-shadow:none;
 			opacity:1;
 		}
 		&::after{
@@ -356,9 +359,9 @@ button {
 		    }
 	}
 	&__info{
-		text-align: left;
-		position: absolute;
-		top:60%;
+    text-align: left;
+	  position: absolute;
+		top:65%;
 		padding: 0 10px;
 	}
 	&__title{
@@ -367,7 +370,6 @@ button {
 		max-height: 7rem;
 		overflow: hidden;
 		margin: 5px 0;
-    // @include ellipsis();
       }
 	&__created{
 		margin-top: 10px;
@@ -407,10 +409,8 @@ button {
 			font-size: 3.2rem;
       max-width:15.5rem;
       max-height:6rem;
-      overflow: hidden;
-      
+      overflow: hidden;  
 		}
-
 		&__month{
 			font-size: 2.1rem;
 			font-weight: 900;
@@ -479,14 +479,38 @@ button {
 .address {
 	display: flex;
 	flex-direction: column;
-	text-align: left;
-	margin-top: 30px;
-	margin-left: 150px;
+	padding-top: 30px;
 	font-size: 2rem;
+	text-align: left;
+	padding-left: 100px;
 	&__title{
 		font-weight: 700;
 	}
 	&__subtitle {
-		margin-bottom: 10px;
+		padding-bottom: 10px;
 	}
+}
+
+footer {
+  background-color: $text;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color:$white;
+  height: 8%;
+  .logo {
+    &__item{
+      fill:$white;
+      opacity:.5;
+   }
+  }
+  span {
+    font-weight: 100;
+  }
+
+  a{
+  	color:$brand;
+  	@include tdn();
+  	font-weight: 700;
+  }
 }
