--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,9 +16,6 @@ $contactcolor:#00C4C4;
 $elementshadow:10px 10px 5px -10px rgba(0,0,0,0.75);
 
 
-
-
-
 * {
 	box-sizing: border-box;
 }
@@ -121,33 +118,30 @@ button {
   }
   &--red {
   	background-color: #f72b3b;
-  	margin-bottom: 100px;
   }
   &--transparent {
   	background-color: $contactcolor;
   	opacity:.6;
-  	outline:5px solid transparent;
   	margin: 0;
   	@include hover{
   		opacity:1;
-  		outline:5px solid #355b82;
   	}
-  }
-  @include hover {
-    color:$white;
-  }  
+  } 
 }
 
 .scroll {
   position: absolute;
-  top:80%;
+  top:90%;
   left:50%;
   transform:translate(-50%, -50%);
+  @include hover {
+  	opacity:.5;
+  }
   }
 
 .section {
+  padding: 40px 0;
   &__img {
-    margin: 10% 0;
     width: 100%;
   }
   &--aqua{
@@ -156,13 +150,10 @@ button {
     position: relative;
    	.info {
 	   	position: absolute;
-	    top:15%;
-	    
+	   	top:15%;
+      	color:$white;
     	p{
     		width: 60%;
-    		@media screen and (max-device-width: 1024px){
-	    		width:90%;	
-   			}	
     	}	
     }
   }
@@ -170,14 +161,16 @@ button {
     background-color: $blue;
     position: relative;
     .info{
+      	width:50%;
     	position: absolute;
-    	top:40%;
+    	top:45%;
+      	left:50%;
     	color:$white;
     	@media screen and (max-device-width: 1024px){
-	  		top:25%;
-   		}
-     }
-
+			top:35%;
+	   }
+      	
+    }
   }
   &--yellow {
 	background-color: $yellow;
@@ -190,12 +183,12 @@ button {
     	p{
 			width: 50%;
 			display: inline-block;
-      	}
+      }
     }
   }
   &--white {
 	@include backGround();
-	height: 500px;
+	padding:80px 0;
 	display: flex;
 	align-items: center;
 	.info {
@@ -213,6 +206,11 @@ button {
   	background-color: #b07cf7;
   	color:$white;
   	text-align: center;
+    .info{
+      &__title{
+        line-height: 1.2;
+      }
+    }
   	p{
 		display: inline-block;
   		width:60%;
@@ -222,9 +220,12 @@ button {
   &--bg{
   	@include backGround();
   	text-align: center;
+    padding:50px 0;
   	p {
   		display: inline-block;
-  		width:30%;
+  		width:50%;
+      max-height:16rem;
+      overflow: hidden;
   	}
   	
   }
@@ -235,6 +236,11 @@ button {
     font-size: 9rem;
     font-family: Raleway, sans-serif;
     margin: 0;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    line-height: 1.2;
+    max-height:27.5rem;
+    overflow: hidden;
   }
 }
 
@@ -245,7 +251,6 @@ button {
   @media screen and (max-device-width: 1024px){
 	top:15%;
    }
-  
   &__items{
     background-color: $white;
     width: 350px;
@@ -273,11 +278,11 @@ button {
     margin: 0;
     text-align: center;
     font-size: 2rem;
-    font-weight:700 ;
+    font-weight:700;
+    max-height:10rem;
+    overflow: hidden;
   }
   &__icons{
-    width: 20%;
-    height: 10%;
     position: absolute;
     top:30%;
     left: 80%;
@@ -479,15 +484,24 @@ button {
 .address {
 	display: flex;
 	flex-direction: column;
-	padding-top: 30px;
+  	justify-content: flex-end;
+  	align-items: flex-start;
+	margin-top: 25px;
+	padding-left: 60px;
 	font-size: 2rem;
-	text-align: left;
-	padding-left: 100px;
 	&__title{
 		font-weight: 700;
 	}
 	&__subtitle {
-		padding-bottom: 10px;
+		margin-bottom: 10px;
+	}
+	a {
+		color:$text;
+		@include hover{
+			color:$brand;
+			
+		}
+		
 	}
 }
 
@@ -507,10 +521,13 @@ footer {
   span {
     font-weight: 100;
   }
-
-  a{
-  	color:$brand;
+  a {
   	@include tdn();
+  	color:$brand;
   	font-weight: 700;
+  	@include hover {
+  		color:$white;
+  		text-decoration: underline;
+  	}
   }
 }
